<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GPSpeedo</string>
    
    <string name="title_set_units">Set Units</string>
    <string name="title_kmph">Km/h</string>
    <string name="title_mph">miles/h</string>
    <string name="title_knots">Knots</string>
    <string name="title_mps">m/s</string>
	<string name="title_quit">Quit</string>
	<string name="title_about">About</string>
	<string name="about_ok">Ok</string>
	<string name="about_string">This program is distributed under the GPLv3 license\nGoto http://code.google.com/p/gpspeedo for more information, source, a bug tracker and a donate link. Email gpspeedo@gmail.com with comments/criticism or for help</string>
	<string name="title_color">Set Color</string>
	<string name="green">Green</string>
	<string name="blue">Blue</string>
	<string name="orange">Orange</string>
	<string name="red">Red</string>

<string name="white">White</string>
<string name="title_preferences">Preferences</string>
<string name="title_padding">Padding</string>
</resources>
